--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -11,16 +11,22 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 </head>
+
 <body>
     
     <div class="container">
 
         <!-- HEADER -->
-        <section>
+        <section class="mb-5">
             <header>
                 <div class="row">
-                    <div class="mx-auto p-3 font-weight-bold text-uppercase text-center">
-                        <h1>RATE THE COURSE - CDMY</h1>
+                    <div class="col">
+                        <img src="images/logoIPSSI.png" alt="Logo de l'IPSSI" style="width: 25%;">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="mx-auto font-weight-bold text-center">
+                        <h1 class="font-weight-bold">RateMyCourse - CDMY</h1>
                     </div>
                 </div>    
             </header>
@@ -36,14 +42,14 @@
                     <form class="p-3">
                         <div class="form-group">
                             <label for="email">Adresse e-mail</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Entrer une adresse mail">
+                            <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" placeholder="Entrer une adresse mail">
                         </div>
                         <div class="form-group">
                             <label for="password">Mot de passe</label>
-                            <input type="password" class="form-control" id="password" placeholder="Mot de passe">
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Mot de passe">
                         </div>
                         <div class="text-center">
-                            <button type="submit" class="btn btn-primary">Se connecter</button>
+                            <button type="submit" class="btn btn-primary" onclick="connexion()">Se connecter</button>
                         </div>
                     </form>
 
@@ -54,4 +60,5 @@
     </div>
        
 </body>
+
 </html>
